--- a/src/scss/base/_text.scss
+++ b/src/scss/base/_text.scss
@@ -12,6 +12,9 @@
 .text-bolder {
   font-weight: 800;
 }
+.text-underline {
+  text-decoration: underline !important;
+}
 // Colors
 .text-primary-bright {
   color: $primaryBright !important;
