--- a/src/scss/base/_animate.scss
+++ b/src/scss/base/_animate.scss
@@ -126,3 +126,32 @@
     box-shadow: 0 0 0 0 rgba($green, 0);
   }
 }
+
+mock-card-animation {
+  z-index: 3000;
+  background-color: var(--color-solid);
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-radius: 1.2rem;
+  box-shadow: var(--box-shadow-float);
+}
+
+.mock-header {
+  height: 20px;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  background-color: var(--color-solid);
+  box-shadow: 0px -10px 10px rgba(0, 0, 0, 0.3);
+  margin-top: 8pt;
+  margin-bottom: -16pt;
+  pointer-events: none;
+  &:first-child {
+    display: none;
+  }
+  span {
+    display: none;
+  }
+}
