--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -50,6 +50,7 @@ where a component doesn't exist, or isn't needed.
 @import "./components/card";
 @import "./components/tap-icon-text";
 @import "./components/offline-notice";
+@import "./components/n-layout";
 
 @import "./components/loading-screen";
 
