--- a/src/scss/base/_animate.scss
+++ b/src/scss/base/_animate.scss
@@ -127,7 +127,7 @@
   }
 }
 
-mock-card-animation {
+.mock-card-animation {
   z-index: 3000;
   background-color: var(--color-solid);
   position: absolute;
