--- a/src/scss/components/_tracker-input-modal.scss
+++ b/src/scss/components/_tracker-input-modal.scss
@@ -39,7 +39,7 @@
 
 .input-model {
   flex-grow: 1;
-  height: 100%;
+  // height: 100%;
   &.type-range {
     .keypad-holder {
       display: none;
