--- a/public/main.css
+++ b/public/main.css
@@ -4902,6 +4902,7 @@ button:focus {
   font-size: 0.8rem;
   padding: 3pt 6pt 3pt 6pt;
   background-color: var(--color-solid);
+  color: var(--color-inverse);
   box-shadow: var(--box-shadow-tight);
   margin: 4pt 2pt; }
   .btn-badge .count {
