--- a/public/main.css
+++ b/public/main.css
@@ -6902,10 +6902,15 @@ aside.n-panel {
   left: 0;
   right: 0; }
   .n-layout .layout-header-fade {
+    pointer-events: none;
     background: var(--header-fade);
     z-index: 3;
-    height: 80px;
-    margin-top: -60px; }
+    height: 70px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: -20px; }
   .n-layout header.layout-header {
     min-height: 50px;
     flex-grow: 0;
