--- a/src/scss/base/_text.scss
+++ b/src/scss/base/_text.scss
@@ -52,6 +52,9 @@
 .bg-solid-2 {
   background-color: var(--color-solid-2);
 }
+.bg-primary-bright {
+  background-color: var(--color-primary-bright) !important;
+}
 .bg-inverse {
   background-color: var(--color-inverse);
 }
