--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -51,6 +51,7 @@ where a component doesn't exist, or isn't needed.
 @import "./components/tap-icon-text";
 @import "./components/offline-notice";
 @import "./components/n-layout";
+@import "./components/capture-log";
 
 @import "./components/loading-screen";
 
