--- a/src/scss/components/_capture-log.scss
+++ b/src/scss/components/_capture-log.scss
@@ -29,11 +29,10 @@
       border: solid 1px var(--color-primary-bright) !important;
       background-color: var(--color-solid) !important;
       border-radius: 8pt !important;
-      div {
-        transform: scale(1.6) translateX(2px);
-      }
     }
     .btn-group .btn {
+      transform: none;
+
       border: solid 1px transparent !important;
       border-radius: 8pt !important;
     }
