--- a/public/main.css
+++ b/public/main.css
@@ -6586,8 +6586,7 @@ aside.n-panel {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 8px 8px;
-  overflow: hidden; }
+  padding: 8px 8px; }
   .item-ball .one-tap {
     position: absolute;
     height: 4px;
@@ -6604,7 +6603,6 @@ aside.n-panel {
     height: 102px;
     border-radius: 34.68px;
     background-color: var(--color-solid);
-    overflow: hidden;
     box-shadow: var(--box-shadow-float);
     display: flex;
     align-items: center;
