--- a/src/scss/components/_item-ball.scss
+++ b/src/scss/components/_item-ball.scss
@@ -15,7 +15,7 @@ $size: $trackerBallSize;
   align-items: center;
   justify-content: center;
   padding: 8px 8px;
-  overflow: hidden;
+  //
 
   .one-tap {
     position: absolute;
@@ -35,7 +35,6 @@ $size: $trackerBallSize;
     height: $size;
     border-radius: $size * 0.34;
     background-color: var(--color-solid);
-    overflow: hidden;
     box-shadow: var(--box-shadow-float);
     display: flex;
     align-items: center;
