--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -78,7 +78,8 @@ TODO: Organize main into components or containers.
 
 .page {
   display: flex;
-  min-height: calc(100vh - 120px);
+  // min-height: calc(100vh - 120px);
+  min-height: fit-content;
   flex-grow: 1;
   background-color: var(--color-bg);
 }
